Changes to Login Page

--- a/www/index.html
+++ b/www/index.html
@@ -209,7 +209,7 @@
       <div class="view">
         <div class="page">
           <div class="page-content login-screen-content">
-            <div class="login-screen-title">Login</div>
+            <div class="login-screen-title">NTU Login</div>
             <div class="list">
               <ul>
                 <li class="item-content item-input">
