--- a/www/index.html
+++ b/www/index.html
@@ -95,8 +95,7 @@
             <div class="title sliding">My App</div>
             <div class="right">
               <a href="#" class="link icon-only panel-open" data-panel="right">
-                <i class="icon f7-icons ios-only">menu</i>
-                <i class="icon material-icons md-only">menu</i>
+                <i class="icon f7-icons ">bell_fill</i><span class="badge badge-light">4</span>
               </a>
             </div>
           </div>
