added cleanliness reporting function

--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,9 @@
                   <a href="/form/" data-view=".view-main" class="panel-close">Form</a>
                 </li>
                 <li>
+                  <a href="/cleanliness_reporting/" data-view=".view-main" class="panel-close">Report Cleanliness Issue</a>
+                </li>
+                <li>
                   <a href="#" data-view=".view-main" class="back">Back in history</a>
                 </li>
               </ul>
@@ -255,5 +258,9 @@
 
   <!-- Your custom app scripts -->
   <script src="js/app.js"></script>
+
+  <!-- Page Scripts -->
+  <script src="js/cleanliness_reporting.js"></script>
+
 </body>
 </html>
