--- a/www/index.html
+++ b/www/index.html
@@ -58,6 +58,9 @@
                   <a href="/cleanliness_reporting/" data-view=".view-main" class="panel-close">Report Cleanliness Issue</a>
                 </li>
                 <li>
+                  <a href="/maintenance_reporting/" data-view=".view-main" class="panel-close">Report Maintenance Issue</a>
+                </li>                
+                <li>
                   <a href="#" data-view=".view-main" class="back">Back in history</a>
                 </li>
               </ul>
