--- a/www/index.html
+++ b/www/index.html
@@ -58,6 +58,9 @@
                   <a href="/cleanliness_reporting/" data-view=".view-main" class="panel-close">Report Cleanliness Issue</a>
                 </li>
                 <li>
+                  <a href="/classes/" data-view=".view-main" class="panel-close">Classes</a>
+                </li>
+                <li>
                   <a href="#" data-view=".view-main" class="back">Back in history</a>
                 </li>
               </ul>
@@ -261,6 +264,6 @@
 
   <!-- Page Scripts -->
   <script src="js/cleanliness_reporting.js"></script>
-
+  <script src="js/calendar.js"></script>
 </body>
 </html>
