updated - B2C 1st page

--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -7,19 +7,33 @@
           <span class="ios-only">Back</span>
         </a>
       </div>
-      <div class="title">About</div>
+      <div class="title">Order via Mobile</div>
     </div>
   </div>
   <div class="page-content">
-    <div class="block-title">About My App</div>
-    <div class="block block-strong">
-      <p>Fugiat perspiciatis excepturi, soluta quod non ullam deleniti. Nobis sint nemo consequuntur, fugiat. Eius perferendis animi autem incidunt vel quod tenetur nostrum, voluptate omnis quasi quidem illum consequuntur, a, quisquam.</p>
-      <p>Laudantium neque magnam vitae nemo quam commodi, in cum dolore obcaecati laborum, excepturi harum, optio qui, consequuntur? Obcaecati dolor sequi nesciunt culpa quia perspiciatis, reiciendis ex debitis, ut tenetur alias.</p>
-    </div>
+    <div class="block-title" style="font-size:20px;">Place your Orders Anytime, Anywhere!</div>
     <div class="block">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni molestiae laudantium dignissimos est nobis delectus nemo ea alias voluptatum architecto, amet similique, saepe iste consectetur in repellat ut minus quibusdam!</p>
-      <p>Molestias et distinctio porro nesciunt ratione similique, magni doloribus, rerum nobis, aliquam quae reiciendis quasi modi. Nam a recusandae, fugiat in ea voluptates fuga eius, velit corrupti reprehenderit dignissimos consequatur!</p>
-      <p>Blanditiis, cumque quo adipisci. Molestiae, dolores dolorum quos doloremque ipsa ullam eligendi commodi deserunt doloribus inventore magni? Ea mollitia veniam nostrum nihil, iusto doloribus a at! Ea molestiae ullam delectus!</p>
+      <p>Select your Canteen or Shop to Order from!</p>
+      <p>Only Places near you will be displayed! </p>
+      <p>Please note that only participating Canteens or Outlets will be shown here.</p>
     </div>
+    <div class="block-title" style="font-size:20px;">Canteens near you</div>
+    <div data-pagination='{"el": ".swiper-pagination"}' data-space-between="10" data-slides-per-view="auto" data-centered-slides="true" class="block-strong swiper-container swiper-init demo-swiper demo-swiper-auto">
+      <div class="swiper-pagination"></div>
+      <div class="swiper-wrapper">
+        <div class="swiper-slide cswiper" style="background-image:url('img/nsfc.png'); background-repeat: no-repeat; background-size: cover;"><p class="cswiper-text">North Spine Food Court</p></div>
+        <div class="swiper-slide cswiper" style="background-image:url('img/koufu.png'); background-repeat: no-repeat; background-size: cover;"><p class="cswiper-text">Koufu @ the South Spine</p></div>
+      </div>
+    </div>
+    <div class="block-title " style="font-size:20px;">F&B Outlets near you</div>
+    <div data-pagination='{"el": ".swiper-pagination"}' data-space-between="20" data-slides-per-view="2" class="block-strong swiper-container swiper-init demo-swiper">
+    <div class="swiper-pagination"></div>
+        <div class="swiper-wrapper">
+            <div class="swiper-slide cswiper" style="background-image:url('img/bakery.jpg'); background-repeat: no-repeat; background-size: cover;"><p class="cswiper-text">Bakery Cuisine</p></div>
+            <div class="swiper-slide cswiper" style="background-image:url('img/grandecibo.jpg');background-repeat: no-repeat; background-size: cover;"><p class="cswiper-text">Grande Cibo</p></div>
+            <div class="swiper-slide cswiper" style="background-image:url('img/eac.jpg'); background-repeat: no-repeat; background-size: cover;"><p class="cswiper-text">Each-A-Cup</p></div>
+            <div class="swiper-slide cswiper" style="background-image:url('img/paik.png'); background-repeat: no-repeat; background-size: cover;"><p class="cswiper-text">Paik's Bibim</p></div>
+        </div>
+    </div>  
   </div>
 </div>
