--- a/www/index.html
+++ b/www/index.html
@@ -264,6 +264,6 @@
 
   <!-- Page Scripts -->
   <script src="js/cleanliness_reporting.js"></script>
-  <script src="js/calendar.js"></script>
+  <script src="js/classes.js"></script>
 </body>
 </html>
