--- a/www/pages/classes.html
+++ b/www/pages/classes.html
@@ -1,12 +1,4 @@
-
-
-<script>
-
-
-
-</script>
-
-<div class="page" data-name="about">
+<div class="page" data-name="classes">
   <div class="navbar">
     <div class="navbar-inner sliding">
       <div class="left">
@@ -27,7 +19,7 @@
           <div class="item-content item-input">
             <div class="item-inner">
               <div class="item-input-wrap">
-                <input type="text" placeholder="Your birth date" readonly="readonly" id="demo-calendar-default"/>
+                <input type="text" placeholder="Select Date" readonly="readonly" id="demo-calendar-default" />
               </div>
             </div>
           </div>
@@ -35,25 +27,28 @@
       </ul>
     </div>
 
-
     <div class="block block-strong">
       <h2>Monday, February 5, 2019</h2>
 
       <h3>Operating System</h3>
       <p class="padding-left"><font color="#9e9e9e">Lecture
-      <br />LT 19
-      <br />13:30-14:30</font></p>
+        <br>LT 19
+        <br>13:30-14:30</font>
+      </p>
 
       <h3>Human Computer Interaction</h3>
       <p class="padding-left"><font color="#9e9e9e">Tutorial
-      <br />TR +1000
-      <br />14:30-15:30</font></p>
+        <br>TR +1000
+        <br>14:30-15:30</font>
+      </p>
 
       <h3>Advance Software Engineering</h3>
       <p class="padding-left"><font color="#9e9e9e">Lab
-      <br />HWLab3
-      <br />15:30-17:30</font></p>
+        <br>HWLab3
+        <br>15:30-17:30</font>
+      </p>
 
     </div>
+    
   </div>
 </div>
