--- a/www/pages/maintenance_reporting.html
+++ b/www/pages/maintenance_reporting.html
@@ -31,7 +31,7 @@
       <div class="swiper-container">
         <div class="swiper-pagination"></div>
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="assets/noimage.png" style="width:90%; border-style:solid; border-radius: 5px; margin-left:5%;"></div>
+          <div class="swiper-slide"><img src="img/noimage.png" style="width:90%; border-style:solid; border-radius: 5px; margin-left:5%;"></div>
         </div>
       </div>
       <div class="row">
