mobile order 2nd update

--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
             <div class="list links-list">
               <ul>
                 <li>
-                  <a href="/about/" data-view=".view-main" class="panel-close">Order via Mobile</a>
+                  <a href="/mobileordering/" data-view=".view-main" class="panel-close">Order via Mobile</a>
                 </li>
                 <li>
                   <a href="/form/" data-view=".view-main" class="panel-close">Form</a>
@@ -133,7 +133,7 @@
           <div class="list">
             <ul>
               <li>
-                <a href="/about/" class="item-content item-link">
+                <a href="/mobileordering/" class="item-content item-link">
                   <div class="item-inner">
                     <div class="item-title">Order via Mobile</div>
                   </div>
