--- a/www/pages/mobileordering.html
+++ b/www/pages/mobileordering.html
@@ -21,7 +21,7 @@
     <div data-pagination='{"el": ".swiper-pagination"}' data-space-between="10" data-slides-per-view="auto" data-centered-slides="true" class="block-strong swiper-container swiper-init demo-swiper demo-swiper-auto">
       <div class="swiper-pagination"></div>
       <div class="swiper-wrapper">
-        <div class="swiper-slide cswiper" style="background-image:url('img/nsfc.png'); background-repeat: no-repeat; background-size: cover;"><p class="cswiper-text">North Spine Food Court</p></div>
+        <div class="swiper-slide cswiper" style="background-image:url('img/nsfc.png'); background-repeat: no-repeat; background-size: cover;"><a href="/foodcourt/" class="cswiper-text" style="color:#000">North Spine Food Court</a></div>
         <div class="swiper-slide cswiper" style="background-image:url('img/koufu.png'); background-repeat: no-repeat; background-size: cover;"><p class="cswiper-text">Koufu @ the South Spine</p></div>
       </div>
     </div>
