--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,9 @@
                   <a href="/classes/" data-view=".view-main" class="panel-close">Classes</a>
                 </li>
                 <li>
+                  <a href="/modules/" data-view=".view-main" class="panel-close">Modules</a>
+                </li>
+                <li>
                   <a href="/todo/" data-view=".view-main" class="back">Todo</a>
                 </li>
                 <li>
