--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,9 @@
             <div class="block-title">Control Main View</div>
             <div class="list links-list">
               <ul>
+              <li>
+                  <a href="/announcements/" data-view=".view-main" class="panel-close">NTU Announcements</a>
+                </li>
                 <li>
                   <a href="/mobileordering/" data-view=".view-main" class="panel-close">Order via Mobile</a>
                 </li>
