--- a/www/pages/announcements.html
+++ b/www/pages/announcements.html
@@ -24,7 +24,7 @@
   <div style="background-image:url(img/applogo2.png)" class="card-header align-items-flex-end">Lorem Ipsum</div>
   <div class="card-content card-content-padding">
     <p class="date">Posted on February 4, 2019 1:30pm</p>
-    <p>Good Day Students, we are proud to announce the official launch of the eNTU App! Your one-stop portal for everything NTU!</p>
+    <p>Good Day Students, eNTUsiastic about your new semester? We are proud to announce the official launch of the eNTU App! Your one-stop portal for everything NTU!</p>
   </div>
   <div class="card-footer"><a href="#" class="link">Read more</a></div>
 </div>
