--- a/www/pages/foodcourt/koufu.html
+++ b/www/pages/foodcourt/koufu.html
@@ -1,4 +1,4 @@
-<div class="page" data-name="about">
+<div class="page" data-name="koufu">
   <div class="navbar">
     <div class="navbar-inner sliding">
       <div class="left">
