--- a/www/pages/mobileordering.html
+++ b/www/pages/mobileordering.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="page-content">
-    <div class="block-title" style="font-size:20px;">Place your Orders Anytime, Anywhere!</div>
+    <div class="block-title" style="font-size:20px; padding-bottom: 10px;">Place your Orders<br>Anytime, Anywhere!</div>
     <div class="block">
       <p>Select your Canteen or Shop to Order from!</p>
       <p>Only Places near you will be displayed! </p>
@@ -21,8 +21,8 @@
     <div data-pagination='{"el": ".swiper-pagination"}' data-space-between="10" data-slides-per-view="auto" data-centered-slides="true" class="block-strong swiper-container swiper-init demo-swiper demo-swiper-auto">
       <div class="swiper-pagination"></div>
       <div class="swiper-wrapper">
-        <div class="swiper-slide cswiper" style="background-image:url('img/nsfc.png'); background-repeat: no-repeat; background-size: cover;"><a href="/foodcourt/" class="cswiper-text" style="color:#000">North Spine Food Court</a></div>
-        <div class="swiper-slide cswiper" style="background-image:url('img/koufu.png'); background-repeat: no-repeat; background-size: cover;"><p class="cswiper-text">Koufu @ the South Spine</p></div>
+        <div class="swiper-slide cswiper" style="background-image:url('img/nsfc.png'); background-repeat: no-repeat; background-size: cover;"><a href="/foodcourt/nsfc" class="cswiper-text" style="color:#000">North Spine Food Court</a></div>
+        <div class="swiper-slide cswiper" style="background-image:url('img/koufu.png'); background-repeat: no-repeat; background-size: cover;"><a href="/foodcourt/koufu" class="cswiper-text" style="color:#000">Koufu @ the South Spine</p></div>
       </div>
     </div>
     <div class="block-title " style="font-size:20px;">F&B Outlets near you</div>
