--- a/www/pages/foodcourt/koufu.html
+++ b/www/pages/foodcourt/koufu.html
@@ -7,11 +7,38 @@
           <span class="ios-only">Back</span>
         </a>
       </div>
-      <div class="title">North Spine Food Court</div>
+      <div class="title">Koufu Food Court</div>
     </div>
   </div>
   <div class="page-content">
-    <div class="block-title" style="font-size:20px;">Select a stall to place your order!</div>
-    <div class="block-strong">Test</div>
+    <div class="block">
+      <div class="block-title" style="font-size:20px;padding-bottom:10px; text-align: center">Select a stall<br> to place your order!</div>
+    </div>
+    <div class="block">
+      <style type="text/css">
+      .card img {
+        width: 100%;
+        height: 100%;
+      }
+      </style>
+      <div class="card" href="">
+          <div class="card-header">Chicken Rice Stall</div>
+          <div class="card-content">
+            <img src="img/chicken_rice_stall.jpg">
+          </div>
+        </div>
+        <div class="card" href="">
+          <div class="card-header">Mini Wok</div>
+          <div class="card-content">
+            <img src="img/western_stall.jpg">
+          </div>
+        </div>
+        <div class="card" href="">
+          <div class="card-header">Western</div>
+          <div class="card-content">
+            <img src="img/mini_wok_stall.jpg">
+          </div>
+        </div>
+    </div>
   </div>
 </div>
