updates to links

--- a/www/pages/foodcourt/nsfc.html
+++ b/www/pages/foodcourt/nsfc.html
@@ -27,13 +27,13 @@
             <img src="img/chicken_rice_stall.jpg">
           </div>
         </div>
-        <div class="card" href="">
+        <div class="card" href="/store-details/miniwok">
           <div class="card-header">Mini Wok</div>
           <div class="card-content">
             <img src="img/western_stall.jpg">
           </div>
         </div>
-        <div class="card" href="">
+        <div class="card" href="/store-details/western">
           <div class="card-header">Western</div>
           <div class="card-content">
             <img src="img/mini_wok_stall.jpg">
