--- a/www/index.html
+++ b/www/index.html
@@ -69,6 +69,9 @@
                     <a href="/todo/" data-view=".view-main" class="panel-close">Todo</a>
                 </li>
                 <li>
+                    <a href="/classroom/" data-view=".view-main" class="panel-close">Open Classroom</a>
+                </li>
+                <li>
                   <a href="#" data-view=".view-main" class="back">Back in history</a>
                 </li>
               </ul>
@@ -283,5 +286,6 @@
   <script src="js/cleanliness_reporting.js"></script>
   <script src="js/maintenance_reporting.js"></script>
   <script src="js/classes.js"></script>
+  <script src="js/classroom.js"></script>
 </body>
 </html>
