Changes to Issue Reporting

--- a/www/index.html
+++ b/www/index.html
@@ -54,10 +54,7 @@
                   <a href="/form/" data-view=".view-main" class="panel-close">Form</a>
                 </li>
                 <li>
-                  <a href="/cleanliness_reporting/" data-view=".view-main" class="panel-close">Report Cleanliness Issue</a>
-                </li>
-                <li>
-                  <a href="/maintenance_reporting/" data-view=".view-main" class="panel-close">Report Maintenance Issue</a>
+                  <a href="/cleanliness_reporting/" data-view=".view-main" class="panel-close">Report Issue</a>
                 </li>
                 <li>
                   <a href="/classes/" data-view=".view-main" class="panel-close">Classes</a>
