--- a/www/pages/cleanliness_reporting.html
+++ b/www/pages/cleanliness_reporting.html
@@ -7,14 +7,14 @@
           <span class="ios-only">Back</span>
         </a>
       </div>
-      <div class="title">Cleanliness Reporting</div>
+      <div class="title">Issue Reporting</div>
     </div>
   </div>
   <div class="page-content">
     <div class="block">
       <div class="block-title">
         <h2 style="color:black; text-align:center; margin-top: 0; margin-bottom: 5; margin-left: 0; margin-right: 0;">
-          Report Cleanliness Issue
+          Report Issue
         </h2>
       </div>
     </div>
@@ -56,7 +56,7 @@
           <li>
             <div class="item-content item-input">
               <div class="item-inner">
-                <div class="item-title item-label">Textarea</div>
+                <div class="item-title item-label">Description</div>
                 <div class="item-input-wrap">
                   <textarea placeholder="Additional Description of issue"></textarea>
                 </div>
