--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
             <div class="navbar-inner sliding">
               <div class="title">
                 <i class="icon f7-icons" style="font-size:20px">person_round_fill</i><br>
-                <span id="leftId">I AM LEE TILL U LOGIN</span>
+                <span id="leftId">PANKAJ POWER</span>
               </div>
             </div>
           </div>
