Notification and Stuff

--- a/www/index.html
+++ b/www/index.html
@@ -90,20 +90,45 @@
             </div>
           </div>
           <div class="page-content">
-            <div class="list links-list">
-              <ul id="notificationList" >
-                <li>
-                  <a href="/mobileordering/" data-view=".view-main" class="panel-close">Offer at BadBoi Chicken Rice<br> @ SouthSpine</a>
-                </li>
-                <li>
-                  <a href="" data-view=".view-main" class="panel-close">New Assigment added <br>for CS/CZ3006</a>
-                </li>
-                <li>
-                  <a href="/announcements/" data-view=".view-main" class="panel-close">Fire Drill at North Spine <br>@ 4pm</a>
-                </li>
-              </ul>
-            </div>
+            <div class="card-content">
+              <div class="list media-list">
+                <ul id="notificationList">
+                  <li class="item-content">
+                    <a href="/mobileordering/" data-view=".view-main" class="panel-close">
+                      <div class="item-inner">
+                        <div class="item-title-row">
+                          <div class="item-title">Offer 15% Discount</div>
+                        </div>
+                        <div class="item-subtitle">BadBoi Chicken Rice @ SouthSpine</div>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="item-content">
+                    <a href="" data-view=".view-main" class="panel-close">
+                      <div class="item-inner">
+                        <div class="item-title-row">
+                          <div class="item-title">New Assigment added </div>
+                        </div>
+                        <div class="item-subtitle">CS/CZ3006</div>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="item-content">
+                    <a href="/announcements/" data-view=".view-main" class="panel-close">
+                      <div class="item-inner">
+                        <div class="item-title-row">
+                          <div class="item-title">Announcement</div>
+                        </div>
+                        <div class="item-subtitle">Fire Drill at North Spine @ 4pm</div>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
           </div>
+        </div>
         </div>
       </div>
     </div>
