try try new menu hierarchical accordion

--- a/www/index.html
+++ b/www/index.html
@@ -42,35 +42,57 @@
           </div>
           <div class="page-content">
             <div class="block-title">Main Menu</div>
-            <div class="list links-list">
+            <div class="list links-list accordion-list">
               <ul>
-              <li>
+                <li>
                   <a href="/announcements/" data-view=".view-main" class="panel-close">NTU Announcements</a>
+                </li>              
+                <li class="accordion-item">
+                    <a href="#" class="item-content item-link">
+                        <div class="item-title">Order via Mobile</div>
+                    </a>
+                    <div class="accordion-item-content">
+                        <div class="block">
+                            <div class="list links-list">
+                                <ul>
+                                    <li>
+                                        <a href="/myorder/" data-view=".view-main" class="panel-close">My Order</a>
+                                    </li>
+                                    <li>
+                                      <a href="/mobileordering/" data-view=".view-main" class="panel-close">Place an Order</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </li>
-                <li>
-                  <a href="/mobileordering/" data-view=".view-main" class="panel-close">Order via Mobile</a>
+                <li class="accordion-item">
+                    <a href="#" class="item-content item-link">
+                        <div class="item-title">My eNTU</div>
+                    </a>
+                    <div class="accordion-item-content">
+                        <div class="block">
+                            <div class="list links-list">
+                                <ul>
+                                    <li>
+                                      <a href="/classes/" data-view=".view-main" class="panel-close">Classes</a>
+                                    </li>
+                                    <li>
+                                      <a href="/modules/" data-view=".view-main" class="panel-close">Modules</a>
+                                    </li>
+                                    <li>
+                                        <a href="/todo/" data-view=".view-main" class="panel-close">Todo</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </li>
-                <li>
-                  <a href="/form/" data-view=".view-main" class="panel-close">Form</a>
-                </li>
-                <li>
-                  <a href="/cleanliness_reporting/" data-view=".view-main" class="panel-close">Report Issue</a>
-                </li>
-                <li>
-                  <a href="/classes/" data-view=".view-main" class="panel-close">Classes</a>
-                </li>
-                <li>
-                  <a href="/modules/" data-view=".view-main" class="panel-close">Modules</a>
-                </li>
-                <li>
-                    <a href="/todo/" data-view=".view-main" class="panel-close">Todo</a>
-                </li>
+                
                 <li>
                     <a href="/classroom/" data-view=".view-main" class="panel-close">Open Classroom</a>
                 </li>
-                <li>
-                  <a href="#" data-view=".view-main" class="back">Back in history</a>
-                </li>
+                
               </ul>
             </div>
           </div>
