circular profile picture in case

--- a/www/index.html
+++ b/www/index.html
@@ -180,6 +180,11 @@
         <!-- Scrollable page content-->
         <div class="page-content">
           <div class="block block-strong">
+            <div style="width: 60%; height: 60%; margin: 0 auto;">
+              <img style="width:100%; height:100%; border-radius:50%; border: solid black 5px;" src="img/noimage.png">
+            </div>
+          </div>
+          <div class="block block-strong">
             <p>This is an example of split view application layout, commonly used on tablets. The main approach of such kind of layout is that you can see different views at the same time.</p>
 
             <p>Each view may have different layout, different navbar type (dynamic, fixed or static) or without navbar.</p>
