--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@
                             <div class="list links-list">
                                 <ul>
                                     <li>
-                                        <a href="/myorder/" data-view=".view-main" class="panel-close">My Order</a>
+                                        <a href="/myorder/" data-view=".view-main" class="panel-close">My Current Order(s)</a>
                                     </li>
                                     <li>
                                       <a href="/mobileordering/" data-view=".view-main" class="panel-close">Place an Order</a>
@@ -88,11 +88,13 @@
                         </div>
                     </div>
                 </li>
-                
                 <li>
                     <a href="/classroom/" data-view=".view-main" class="panel-close">Open Classroom</a>
                 </li>
                 
+                <li>
+                    <a href="/cleanliness_reporting/" data-view=".view-main" class="panel-close">Cleanliness Reporting</a>
+                </li>
               </ul>
             </div>
           </div>
