--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
             <div class="navbar-inner sliding">
               <div class="title">
                 <i class="icon f7-icons" style="font-size:20px">person_round_fill</i><br>
-                <span id="leftId">PANKAJ POWER</span>
+                <span id="leftId">CHEONGING TO LEEED U</span>
               </div>
             </div>
           </div>
@@ -186,12 +186,40 @@
               <img style="width:100%; height:100%; border-radius:50%; border: solid black 5px;" src="img/noimage.png">
             </div>
           </div>
-          <div class="block block-strong">
-            <p>This is an example of split view application layout, commonly used on tablets. The main approach of such kind of layout is that you can see different views at the same time.</p>
 
-            <p>Each view may have different layout, different navbar type (dynamic, fixed or static) or without navbar.</p>
 
-            <p>The fun thing is that you can easily control one view from another without any line of JavaScript just using "data-view" attribute on links.</p>
+          <div class="card card-outline">
+            <div class="card-header">Order History</div>
+              
+              <div class="card-content">
+                <div class="list media-list">
+                  <ul>
+                    <li class="item-content">
+                      <div class="item-media"><img src="img/chicken_rice_stall.jpg" width="50" height="50"/></div>
+                      <div class="item-inner">
+                        <div class="item-title-row">
+                          <div class="item-title">Chicken Rice</div>
+                        </div>
+                        <div class="item-subtitle">Cost: $4</div>
+                        <div class="item-subtitle" style="font-size: 12px; color:grey;">Date/Time: 1/1/2019 12:45pm</div>
+                      </div>
+                    </li>
+
+                    <li class="item-content">
+                      <div class="item-media"><img src="img/mini_wok_stall.jpg" width="50" height="50"/></div>
+                      <div class="item-inner">
+                        <div class="item-title-row">
+                          <div class="item-title">Mini Wok</div>
+                        </div>
+                        <div class="item-subtitle">Cost: $4</div>
+                        <div class="item-subtitle" style="font-size: 12px; color:grey;">Date/Time: 2/1/2019 1:25pm</div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+            <div class="card-footer">Total Spent: $8</div>
           </div>
 
           <div class="block-title">Navigation</div>
@@ -254,27 +282,6 @@
                 <a href="/request-and-load/user/123456/">Request Data & Load</a>
               </li>
             </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Popup -->
-    <div class="popup" id="my-popup">
-      <div class="view">
-        <div class="page">
-          <div class="navbar">
-            <div class="navbar-inner">
-              <div class="title">Popup</div>
-              <div class="right">
-                <a href="#" class="link popup-close">Close</a>
-              </div>
-            </div>
-          </div>
-          <div class="page-content">
-            <div class="block">
-              <p>Popup content goes here.</p>
-            </div>
           </div>
         </div>
       </div>
