--- a/www/index.html
+++ b/www/index.html
@@ -61,6 +61,9 @@
                                     <li>
                                       <a href="/mobileordering/" data-view=".view-main" class="panel-close">Place an Order</a>
                                     </li>
+                                    <li>
+                                      <a href="/orderhistory/" data-view=".view-main" class="panel-close">Order History</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -89,11 +92,11 @@
                     </div>
                 </li>
                 <li>
-                    <a href="/classroom/" data-view=".view-main" class="panel-close">Open Classroom</a>
+                    <a href="/classroom/" data-view=".view-main" class="panel-close">Open Classrooms</a>
                 </li>
                 
                 <li>
-                    <a href="/cleanliness_reporting/" data-view=".view-main" class="panel-close">Cleanliness Reporting</a>
+                    <a href="/cleanliness_reporting/" data-view=".view-main" class="panel-close">Report an Issue!</a>
                 </li>
               </ul>
             </div>
@@ -213,7 +216,7 @@
                         </div>
                         <div class="item-subtitle">Cost: $4</div>
                         <div class="item-subtitle">Status: IN QUEUE</div>
-                        <div class="item-subtitle" style="font-size: 12px; color:grey;">Last Updated: 2/1/2019 1:55pm</div>
+                        <div class="item-subtitle" style="font-size: 12px; color:grey;">Last Updated: 1/1/2019 12:45pm</div>
                       </div>
                     </li>
                   </ul>
