--- a/www/pages/myorder.html
+++ b/www/pages/myorder.html
@@ -7,7 +7,7 @@
           <span class="ios-only">Back</span>
         </a>
       </div>
-      <div class="title">My Order</div>
+      <div class="title">My Current Order(s)</div>
     </div>
   </div>
   <div class="page-content">
