added receipt number to my orders page

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
   <meta name="theme-color" content="#2196f3">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-  <title>My App</title>
+  <title>eNTU: Everything NTU!</title>
 
   <link rel="stylesheet" href="framework7/css/framework7.min.css">
   <link rel="stylesheet" href="css/icons.css">
@@ -173,7 +173,7 @@
                 <i class="icon material-icons md-only">menu</i>
               </a>
             </div>
-            <div class="title sliding">My App</div>
+            <div class="title sliding">eNTU: Everything NTU!</div>
             <div class="right">
               <a href="#" onclick="notificationReset()" class="link icon-only panel-open" data-panel="right">
                 <i class="icon f7-icons ios-only">info_round<span  class="badge color-red"></span></i>
