--- a/www/pages/myorder.html
+++ b/www/pages/myorder.html
@@ -22,8 +22,9 @@
         <p>Stall: Chicken Rice</p>
         <p>Order Description: Roasted Chicken Rice</p>
         <p>Order Status: READY FOR COLLECTION</p>
+        <p>Receipt No.: CR0135462</p>
       </div>
-      <div class="card-footer"><a href="">View Order</a></div>
+      <div class="card-footer"><a href="">Collect Order</a></div>
     </div>
     
     <div class="card card-outline">
@@ -34,8 +35,9 @@
         <p>Outlet: Each-A-Cup</p>
         <p>Order Description: Milk Tea with Pearls</p>
         <p>Order Status: IN QUEUE</p>
+        <p>Receipt No.: CR0135462</p>
       </div>
-      <div class="card-footer"><a href="">View Order</a></div>
+      <div class="card-footer"><a href="">Collect Order</a></div>
     </div>
     
   </div>
