update routing with data passing

--- a/www/index.html
+++ b/www/index.html
@@ -97,9 +97,8 @@
                 <li>
                     <a href="/classroom/" data-view=".view-main" class="panel-close">Open Classrooms</a>
                 </li>
-                
                 <li>
-                    <a href="/cleanliness_reporting/" data-view=".view-main" class="panel-close">Report an Issue!</a>
+                    <a href="/issue_reporting/" data-view=".view-main" class="panel-close">Report an Issue!</a>
                 </li>
               </ul>
             </div>
