--- a/www/pages/foodcourt/koufu.html
+++ b/www/pages/foodcourt/koufu.html
@@ -27,16 +27,16 @@
             <img src="img/chicken_rice_stall.jpg">
           </div>
         </div>
-        <div class="card" href="">
+        <div class="card" >
           <div class="card-header">Mini Wok</div>
           <div class="card-content">
-            <img src="img/western_stall.jpg">
+            <a href="/store-details/koufu/miniwok"><img src="img/mini_wok_stall.jpg"></a>
           </div>
         </div>
-        <div class="card" href="">
+        <div class="card" href="/store-details/western">
           <div class="card-header">Western</div>
           <div class="card-content">
-            <img src="img/mini_wok_stall.jpg">
+            <a href="/store-details/koufu/western"><img src="img/western_stall.jpg"></a>
           </div>
         </div>
     </div>
