--- a/www/pages/foodcourt/nsfc.html
+++ b/www/pages/foodcourt/nsfc.html
@@ -30,13 +30,13 @@
         <div class="card" >
           <div class="card-header">Mini Wok</div>
           <div class="card-content">
-            <a href="/store-details/miniwok"><img src="img/mini_wok_stall.jpg"></a>
+            <a href="/store-details/NSFC/miniwok"><img src="img/mini_wok_stall.jpg"></a>
           </div>
         </div>
         <div class="card" href="/store-details/western">
           <div class="card-header">Western</div>
           <div class="card-content">
-            <a href="/store-details/western"><img src="img/western_stall.jpg"></a>
+            <a href="/store-details/NSFC/western"><img src="img/western_stall.jpg"></a>
           </div>
         </div>
     </div>
