--- a/www/pages/modules.html
+++ b/www/pages/modules.html
@@ -1,12 +1,4 @@
-
-
-<script>
-
-
-
-</script>
-
-<div class="page" data-name="about">
+<div class="page" data-name="Modules">
   <div class="navbar">
     <div class="navbar-inner sliding">
       <div class="left">
