--- a/www/pages/store-details/miniwok.html
+++ b/www/pages/store-details/miniwok.html
@@ -28,14 +28,14 @@
       <div class="card-content card-content-padding">
         <img class="center" style="max-width: 600px;" src="img/fried-rice.jpeg" alt="">
       </div>
-      <div class="card-footer"><button class="button">Select</button></div>
+      <div class="card-footer"><button class="button" onclick="orderSummary('img/fried-rice.jpeg','Fried Rice','Mini Wok','{{$route.params.location}}','$5.00');">Select</button></div>
     </div>
     <div class="card">
       <div class="card-header">Hor Fun</div>
       <div class="card-content card-content-padding">
         <img class="center" style="max-width: 600px;" src="img/hor-fun.jpg" alt="">
       </div>
-      <div class="card-footer"><button class="button">Select</button></div>
+      <div class="card-footer"><button class="button" onclick="orderSummary('img/hor-fun.jpg','Hor Fun','Mini Wok','{{$route.params.location}}','$5.00')">Select</button></div>
     </div>
   </div>
 </div>
