--- a/www/pages/store-details/western.html
+++ b/www/pages/store-details/western.html
@@ -24,18 +24,18 @@
     }
     </style>
     <div class="card">
-      <div class="card-header">Fish and Chip</div>
+      <div class="card-header">Fish and Chips</div>
       <div class="card-content card-content-padding">
         <img class="center" style="max-width: 600px;" src="img/western_stall.jpg" alt="">
       </div>
-      <div class="card-footer"><button class="button">Select</button></div>
+      <div class="card-footer"><button class="button" onclick="orderSummary('img/western_stall.jpg','Fish and chips','Western','{{$route.params.location}}','$5.00');">Select</button></div>
     </div>
     <div class="card">
       <div class="card-header">Spaghetti</div>
       <div class="card-content card-content-padding">
         <img class="center" style="max-width: 600px;" src="img/spaghetti.jpg" alt="">
       </div>
-      <div class="card-footer"><button class="button">Select</button></div>
+      <div class="card-footer"><button class="button" onclick="orderSummary('img/spaghetti.jpg','Spaghetti','Western',''{{$route.params.location}}','$5.00');">Select</button></div>
     </div>
   </div>
 </div>
