--- a/www/index.html
+++ b/www/index.html
@@ -195,7 +195,7 @@
             </div>
           </div>
             <div class="card-header" style="display:block;"><h2 style="text-align:center; ">My E-Wallet Balance: $123.45</h2></div>
-            <div class="card-header" style="display:block;text-align:center; justify:center; margin: 0 auto;"><a href="">Top-up E-Wallet</a></div>  
+            <div class="card-header" style="display:block;text-align:center; justify:center; margin: 0 auto; padding-top:10px;"><a href="">Top-up E-Wallet</a></div>  
               <div class="card-content">
 
               </div>
