--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
             <div class="navbar-inner sliding">
               <div class="title">
                 <i class="icon f7-icons" style="font-size:20px">person_round_fill</i><br>
-                <span id="leftId">CHEONGING TO LEEED U</span>
+                <span id="leftId"></span>
               </div>
             </div>
           </div>
@@ -226,7 +226,7 @@
                           <div class="item-title">Milk Tea with Pearls</div>
                         </div>
                         <div class="item-subtitle">Cost: $4</div>
-                        <div class="item-subtitle">Status: IN QUEUE</div>
+                        <div class="item-subtitle">Status: PREPARING</div>
                         <div class="item-subtitle" style="font-size: 12px; color:grey;">Last Updated: 1/1/2019 12:45pm</div>
                       </div>
                     </li>
