--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <!-- Your app title -->
-  <title>ParkingBuddy</title>
+  <title>eNTU: Everything NTU!</title>
   <!-- Path to Framework7 iOS CSS theme styles-->
     <style>
         body {
