--- a/www/main.html
+++ b/www/main.html
@@ -193,7 +193,7 @@
               <img style="width:100%; height:100%; border-radius:50%; border: solid black 5px;" src="img/noimage.png">
             </div>
           </div>
-            <div class="card-header" style="display:block;"><h2 style="text-align:center; ">My E-Wallet Balance: $123.45</h2></div>
+            <div class="card-header" style="display:block;"><h2 style="text-align:center; ">My E-Wallet Balance: <span id="walletBalance"></span></h2></div>
             <div class="card-header" style="display:block;text-align:center; justify:center; margin: 0 auto;"><a href="">Top-up E-Wallet</a></div>  
               <div class="card-content">
 
