--- a/www/main.html
+++ b/www/main.html
@@ -48,6 +48,28 @@
                 </li>              
                 <li class="accordion-item">
                     <a href="#" class="item-content item-link">
+                        <div class="item-title">My eNTU</div>
+                    </a>
+                    <div class="accordion-item-content">
+                        <div class="block">
+                            <div class="list links-list">
+                                <ul>
+                                    <li>
+                                      <a href="/classes/" data-view=".view-main" class="panel-close">Classes</a>
+                                    </li>
+                                    <li>
+                                      <a href="/modules/" data-view=".view-main" class="panel-close">Modules</a>
+                                    </li>
+                                    <li>
+                                        <a href="/todo/" data-view=".view-main" class="panel-close">Todo</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="accordion-item">
+                    <a href="#" class="item-content item-link">
                         <div class="item-title">Order via Mobile</div>
                     </a>
                     <div class="accordion-item-content">
@@ -65,28 +87,6 @@
                                     </li>
                                     <li>
                                       <a href="/orderhistory/" data-view=".view-main" class="panel-close">Order History</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="accordion-item">
-                    <a href="#" class="item-content item-link">
-                        <div class="item-title">My eNTU</div>
-                    </a>
-                    <div class="accordion-item-content">
-                        <div class="block">
-                            <div class="list links-list">
-                                <ul>
-                                    <li>
-                                      <a href="/classes/" data-view=".view-main" class="panel-close">Classes</a>
-                                    </li>
-                                    <li>
-                                      <a href="/modules/" data-view=".view-main" class="panel-close">Modules</a>
-                                    </li>
-                                    <li>
-                                        <a href="/todo/" data-view=".view-main" class="panel-close">Todo</a>
                                     </li>
                                 </ul>
                             </div>
@@ -190,7 +190,7 @@
           <div class="card card-outline">
           <div class="block block-strong">
             <div style="width: 60%; height: 60%; margin: 0 auto;">
-              <img style="width:100%; height:100%; border-radius:50%; border: solid black 5px;" src="img/noimage.png">
+              <img style="width:100%; height:100%; border-radius:50%; border: solid black 5px;" src="img/defaultprofile.png">
             </div>
           </div>
             <div class="card-header" style="display:block;"><h2 style="text-align:center; ">My E-Wallet Balance: <span id="walletBalance"></span></h2></div>
@@ -210,7 +210,7 @@
                       <div class="item-media"><img src="img/chicken_rice_stall.jpg" width="50" height="50"/></div>
                       <div class="item-inner">
                         <div class="item-title-row">
-                          <div class="item-title">Roasted Chicken Rice</div>
+                          <div class="item-title">Chicken Rice</div>
                         </div>
                         <div class="item-subtitle">Cost: $4</div>
                         <div class="item-subtitle">Status: READY TO COLLECT</div>
@@ -277,7 +277,7 @@
       <div class="view">
         <div class="page">
           <div class="page-content login-screen-content">
-            <div class="login-screen-title">NTU Login</div>
+            <div class="login-screen-title">eNTU Login</div>
             <div class="list">
               <ul>
                 <li class="item-content item-input">
