--- a/www/main.html
+++ b/www/main.html
@@ -164,7 +164,7 @@
     <!-- Your main view, should have "view-main" class -->
     <div class="view view-main ios-edges">
       <!-- Page, data-name contains page name which can be used in callbacks -->
-      <div class="page" data-name="home">
+      <div class="page" data-name="home" data-page="home">
         <!-- Top Navbar -->
         <div class="navbar">
           <div class="navbar-inner">
