--- a/www/pages/mobileordering.html
+++ b/www/pages/mobileordering.html
@@ -2,7 +2,7 @@
   <div class="navbar">
     <div class="navbar-inner sliding">
       <div class="left">
-        <a href="//" data-view=".view-main" class="link back">
+        <a href="/home/" class="link back">
           <i class="icon icon-back"></i>
           <span class="ios-only">Back</span>
         </a>
