--- a/www/main.html
+++ b/www/main.html
@@ -326,8 +326,7 @@
   <script src="js/app.js"></script>
 
   <!-- Page Scripts -->
-  <script src="js/cleanliness_reporting.js"></script>
-  <script src="js/maintenance_reporting.js"></script>
+  <script src="js/issue_reporting.js"></script>
   <script src="js/classes.js"></script>
   <script src="js/classroom.js"></script>
 </body>
