--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -60,7 +60,7 @@
                   <div class="item-title">Milk Tea with Pearls</div>
                 </div>
                 <div class="item-subtitle">Cost: $4</div>
-                <div class="item-subtitle">Status: PREPARING</div>
+                <div id="status" class="item-subtitle">Status: PREPARING</div>
                 <div class="item-subtitle" style="font-size: 12px; color:grey;">Last Updated: 1/1/2019 12:45pm</div>
               </div>
             </li>
