Added New Order to Home Page

--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -1,4 +1,5 @@
 <!-- Page, data-name contains page name which can be used in callbacks -->
+<script src="../js/app.js"></script>
 <div class="page" data-name="home" data-page="home">
   <!-- Top Navbar -->
   <div class="navbar">
@@ -40,7 +41,7 @@
 
       <div class="card-content">
         <div class="list media-list">
-          <ul>
+          <ul id="curOrderList">
             <li class="item-content">
               <div class="item-media"><img src="img/chicken_rice_stall.jpg" width="50" height="50"/></div>
               <div class="item-inner">
@@ -64,6 +65,7 @@
                 <div class="item-subtitle" style="font-size: 12px; color:grey;">Last Updated: 1/1/2019 12:45pm</div>
               </div>
             </li>
+
           </ul>
         </div>
       </div>
@@ -104,6 +106,6 @@
 
       <div class="card-footer">Total Spent: $8</div>
     </div>
-    
+
   </div>
 </div>
